apply suggestions from Alessandro
https://kubernetes.slack.com/archives/C981W2HD3/p1676625968543089

Resolves:
Related:

--- a/kapitan/inventory/classes/common.yml
+++ b/kapitan/inventory/classes/common.yml
@@ -1,8 +1,4 @@
 parameters:
   kapitan:
-    dependencies:
-      - type: helm
-        output_path: charts/gitlab
-        source: https://charts.gitlab.io
-        version: 6.8.0
-        chart_name: gitlab
+    vars:
+      target: ${target_name}
