--- a/kapitan/inventory/classes/gitlab/config.yml
+++ b/kapitan/inventory/classes/gitlab/config.yml
@@ -4,15 +4,15 @@ parameters:
     gitlab:
       name: gitlab
       namespace: gitlab-server
-      version: 6.8.0
+      version: 6.8.3
       chart_path: charts/gitlab/${charts:gitlab:version}
-      instance_name: ${fqdn}
+      instance_name: ${charts:gitlab:fqdn}
       helm_values:
         upgradeCheck:
           enabled: true
         global:
           hosts:
-            domain: ${fqdn}
+            domain: ${charts:gitlab:fqdn}
             gitlab:
               name: ${charts:gitlab:instance_name}
           ingress:
@@ -31,7 +31,7 @@ parameters:
             enabled: true
           pages:
             enabled: true
-            host: pages.${fqdn}
+            host: pages.${charts:gitlab:fqdn}
             artifactsServer: true
             objectStore:
               enabled: true
@@ -123,6 +123,13 @@ parameters:
           ## https://docs.gitlab.com/charts/charts/globals#configure-registry-settings
           registry:
             bucket: registry
+          hpa:
+            apiVersion: "autoscaling/v2"
+          batch:
+            cronJob:
+              apiVersion: "batch/v1"
+          pdb:
+            apiVersion: "policy/v1"
         prometheus:
           install: false
         gitlab-runner:
@@ -268,3 +275,64 @@ parameters:
         kas:
           metrics:
             enabled: true
+    minio:
+      name: minio
+      namespace: gitlab-object-storage
+      version: 12.1.3
+      chart_path: charts/minio/${charts:minio:version}
+      helm_values:
+        global:
+          imageRegistry: image-proxy.example.com
+        auth:
+          existingSecret: root-console-user
+        mode: distributed
+        statefulset:
+          replicaCount: 8
+          zones: 2
+          drivesPerNode: 2
+        persistence:
+          enabled: true
+          size: 32Gi
+        provisioning:
+          enabled: true
+          buckets:
+            - name: registry
+            - name: git-lfs
+            - name: runner-cache
+            - name: gitlab-uploads
+            - name: gitlab-artifacts
+            - name: gitlab-backups
+            - name: gitlab-packages
+            - name: tmp
+            - name: gitlab-mr-diffs
+            - name: gitlab-terraform-state
+            - name: gitlab-ci-secure-files
+            - name: gitlab-dependency-proxy
+            - name: gitlab-pages
+          usersExistingSecrets:
+            - centralized-minio-users
+        extraEnvVars:
+          - name: MINIO_PROMETHEUS_URL
+            value: http://prometheus-operated.kube-infra.svc:9090
+          - name: MINIO_PROMETHEUS_JOB_ID
+            value: minio
+        ingress:
+          enabled: true
+          ingressClassName: internal-nginx
+          hostname: ${charts:minio:fqdn}.${domain}
+          annotations:
+            cert-manager.io/cluster-issuer: letsencrypt-production-issuer
+          path: /
+          tls: true
+        metrics:
+          serviceMonitor:
+            enabled: true
+            labels:
+              release: kube-prometheus-stack
+        podAnnotations:
+          prometheus.io/scrape: "true"
+          prometheus.io/path: "/minio/v2/metrics/cluster"
+          prometheus.io/port: "9000"
+          release: kube-prometheus-stack
+        serviceAccount:
+          name: minio-sa
