--- a/kapitan/inventory/classes/gitlab/helm.yml
+++ b/kapitan/inventory/classes/gitlab/helm.yml
@@ -6,14 +6,9 @@ parameters:
     dependencies:
       - type: helm
         output_path: ${charts:gitlab:chart_path}
-        source: https://charts.gitlab.io
+        source: ${charts:gitlab:repo}
         version: ${charts:gitlab:version}
         chart_name: ${charts:gitlab:name}
-      - type: helm
-        output_path: ${charts:minio:chart_path}
-        source: https://charts.bitnami.com/bitnami
-        version: ${charts:minio:version}
-        chart_name: ${charts:minio:name}
     compile:
       - input_type: helm
         output_path: ${charts:gitlab:name}
@@ -23,11 +18,8 @@ parameters:
         helm_params:
           namespace: ${charts:gitlab:namespace}
           name: ${charts:gitlab:name}
-      - input_type: helm
-        output_path: ${charts:minio:name}
+      - output_path: ${charts:gitlab:name}
+        input_type: jinja2
         input_paths:
-          - ${charts:minio:chart_path}
-        helm_values: ${charts:minio:helm_values}
-        helm_params:
-          namespace: ${charts:minio:namespace}
-          name: ${charts:minio:name}
+          - templates/docs/gitlab-values.yaml
+          - templates/scripts/deploy.sh
